# aiotransmission

./: README.markdown  setup.cfg  setup.py
aiotr/: __init__.py  client.py  exception.py  typing.py  utils.py
tests/: test_client.py
